2004-01-18  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/path-chemistry.c (sp_selected_path_uncross): New method

	* src/interface.c (sp_ui_selection_menu): Added uncross

	* src/verbs.c: Added SP_VERB_SELECTION_UNCROSS

	* src/verbs.h: Added SP_VERB_SELECTION_UNCROSS

	* src/libnr/nr-pathops.c: Working uncross code

	* src/libnr/nr-pathops.h: Working uncross code

2004-01-18  Changwoo Ryu  <cwryu@debian.org>

	* configure.in: Added "ko" to ALL_LINGUAS.

2004-01-11  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* glade/icons.svg: Added two new icon images for xml:space UI

	* src/dialogs/text-edit.c (sp_text_edit_dialog): xml:space UI for
	text object
	(sp_text_edit_dialog_update_object): xml:space support
	(sp_text_edit_dialog_read_selection): xml:space UI update code

2004-01-11  Lauris Kaplinski  <lauris@kaplinski.com>

	* configure.in: Added "fi" to ALL_LINGUAS, thanks to Jaakko H Kyro

2004-01-11  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/text-context.c (sp_text_context_selection_changed): Previous
	fix was not so good, i.e., empty text was remained.
	
	* src/selection-chemistry.c (sp_selection_delete): So I modified
	this method instead

	* src/sp-text.c (ucs2_concat_ws): New function
	(sp_text_insert): Better text insertion. This change should also
	fix space insertion bug reported by Lynn Kerby

	* src/sp-text.h (SP_STRING_IS_SPACE_PRESERVE): New macro

	* TODO: Updated

2004-01-10  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/text-context.c (sp_text_context_selection_changed):
	Fixed C-x segv bug. It was called sp_repr_unparent twice for empty
	text.

2004-01-09  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-item.c (sp_item_i2root_affine): Do not apply root
	viewbox transform to cascade

2004-01-04  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/sp-text.c: Removed non SP_TEXT_NEW_CONTENT codes

	* src/sp-text.h: Ditto

	* src/testing.h: Ditto

	* src/libnrtype/nr-glyph.c: terminator glyph ID should be
	undefined
