@@ -1,0 +1,30 @@
+/* XPM */
+static char * selection_intersect_xpm[] = {
+"24 24 3 1",
+" 	c None",
+".	c #000000",
+"+	c #0DD8C7",
+"                        ",
+"                        ",
+"                        ",
+"           ......       ",
+"         ..      ..     ",
+"        .          .    ",
+"       .            .   ",
+"      .              .  ",
+"      .              .  ",
+"      .              .  ",
+"   ...............   .  ",
+"   .  .++++++++++.   .  ",
+"   .   .+++++++++.  .   ",
+"   .    .++++++++. .    ",
+"   .     ..++++++..     ",
+"   .       .......      ",
+"   .             .      ",
+"   .             .      ",
+"   .             .      ",
+"   .             .      ",
+"   ...............      ",
+"                        ",
+"                        ",
+"                        "};
